# eg_stm_hal

./: .gitignore  .travis.yml  Cargo.toml  README.md  foldAndColour
.github/workflows/: examples.yml
Dotcargo/: config
boards/blackpill-stm32f411/: memory.x
boards/bluepill/: Embed.toml
boards/longan-gd32vf103/: .cargo  memory.x
boards/none-stm32f030/: .cargo
boards/none-stm32h742/: openocd.gdb
boards/none-stm32l4x1/: memory.x
examples/: LoRaReceive.rs  ads1015-display.rs  ads1015_oled.rs  blink.rs  blink3.rs  blink_impl.rs  dht.rs  dht11.rs  echo_by_char.rs  echo_console_by_char.rs  echo_console_string.rs  echo_string.rs  gps_rw.rs  gps_rw_by_char.rs  lora_gps.rs  lora_receive.rs  lora_send.rs  lora_spi_gps.rs  lora_spi_receive.rs  lora_spi_send.rs  oled_gps.rs  serial-dma-tx.rs  serial_char.rs  serial_cross.rs  serial_dma_tx.rs  serial_fmt.rs  serial_gps_rw.rs  serial_gps_rw_by_char.rs  serial_loopback_char.rs  serial_loopback_string.rs  serial_pass_thru_string.rs  serial_string.rs  serial_string_tx.rs  temp.rs  temperature.rs  test.rs  text_i2c.rs
examplesStatus/blackpill-stm32f401/: COMMIT  DATE.STAMP
examplesStatus/blackpill-stm32f411/: COMMIT  DATE.STAMP
examplesStatus/bluepill/: COMMIT  DATE.STAMP
examplesStatus/discovery-stm32f303/: DATE.STAMP
examplesStatus/discovery-stm32l100/: COMMIT  DATE.STAMP
examplesStatus/heltec-lora-node151/: COMMIT  DATE.STAMP
examplesStatus/none-stm32f722/: COMMIT  DATE.STAMP
examplesStatus/none-stm32h742/: COMMIT  DATE.STAMP
examplesStatus/none-stm32l0x2/: DATE.STAMP
examplesStatus/none-stm32l4x1/: COMMIT  DATE.STAMP
examplesStatus/nucleo-64/: COMMIT  DATE.STAMP
src/: lib.rs
utils/: checkExample  pushIfNeeded
