[package]
name = "eg_stm_hal"
version = "0.1.0"
authors = ["Paul Gilbert <pdgilbert@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/pdgilbert/eg_stm_hal"
#documentation = "https://"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# name = "whatever"  #lib name defaults to package name
# for most package the path to the lib would be
#path = "src/lib.rs"
# for the setup here "src/lib.rs" works if there is a link src/  --> ../../src/  
# but  "../../src/lib.rs" works without the link.
path = "../../src/lib.rs"
# A flag for enabling unit tests for this target. This is used by `cargo test`.
test = true

[[example]]
name = "test"
path = "examples/test.rs"
#required-features = ["rt"]

[[example]]
name = "blink"
path = "examples/blink.rs"

[[example]]
name = "blink3"
path = "examples/blink3.rs"

[[example]]
name = "echo_console_by_char"
path = "examples/echo_console_by_char.rs"

[[example]]
name = "echo_console_string"
path = "examples/echo_console_string.rs"

[[example]]
name = "serial_char"
path = "examples/serial_char.rs"

[[example]]
name = "serial_string"
path = "examples/serial_string.rs"

[[example]]
name = "gps_rw_by_char"
path = "examples/gps_rw_by_char.rs"

[[example]]
name = "gps_rw"
path = "examples/gps_rw.rs"

[[example]]
name = "temperature"
path = "examples/temperature.rs"


[[example]]
name = "dht"
path = "examples/dht.rs"

[[example]]
name = "dht11"
path = "examples/dht11.rs"

[[example]]
name = "text_i2c"
path = "examples/text_i2c.rs"

[[example]]
name = "ads1015-display"
path = "examples/ads1015-display.rs"

[[example]]
name = "lora_send"
path = "examples/lora_send.rs"

[[example]]
name = "lora_receive"
path = "examples/lora_receive.rs"

[[example]]
name = "lora_gps"
path = "examples/lora_gps.rs"


[dependencies]
cortex-m = "0.6.0"
nb = "0.1.2"
cortex-m-rt = "0.6.8"
#stm32f1 = "0.9.0"
#as-slice = "0.1.2"
#as-slice = "0.1"
panic-halt = "0.2.0"

# for example  ads1015-display
dht11 = "0.3.1"
#dht-sensor = "0.1.1"

ads1x1x = "0.2" 
# this causes problem with stm32l0xx_hal:  shared-bus = { version = "0.1.4", features = ["cortexm"] }

stm32f1 = "0.11.0"
stm32f3 = "0.11"
stm32f4 = "0.11"
stm32l1 = "0.5.0"

# for  text_i2c 
[dependencies.ssd1306]
git = "https://github.com/jamwaffles/ssd1306"
#version = "0.3.1" # "0.2.6" "0.3.1" 
#optional = true

# for  text_i2c which uses ssd1306, ads1015-display example.    need rust 1.40.0 for #[non_exhaustive]
[dependencies.embedded-graphics]
#optional = true
version = "0.6.0" #  "0.4.4" # "0.4.9"  "0.6.2" 

[dependencies.sx127x_lora]
#git = "https://github.com/mr-git/sx127x_lora"
#git = "https://github.com/mvniekerk/sx127x_lora"
git = "https://github.com/hdoordt/sx127x_lora" 
#features = ["version_0x12"]
#version = "0.3.1"
#optional = true

#[dependencies.dht11]
#git = "https://github.com/plorefice/dht11-rs"
#version = "0.3.1"
#optional = true

[dependencies.dht-sensor]
git = "https://github.com/michaelbeaumont/dht-sensor"
#version = "0.1.1"
#optional = true

[dependencies.stm32f0xx-hal]
git = "https://github.com/stm32-rs/stm32f0xx-hal"
#git = "https://github.com/stm32-rs/stm32f0xx-hal#staging"
optional = true

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal"
#version = "0.5.1"
optional = true

[dependencies.stm32f3xx-hal]
git = "https://github.com/stm32-rs/stm32f3xx-hal"
#version = "0.3.0"
optional = true

[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal"
#version = "0.6.0"
optional = true

[dependencies.stm32f7xx-hal]
git = "https://github.com/stm32-rs/stm32f7xx-hal"
optional = true

[dependencies.stm32h7xx-hal]
git = "https://github.com/stm32-rs/stm32h7xx-hal"
optional = true

[dependencies.stm32l0xx-hal]
git = "https://github.com/stm32-rs/stm32l0xx-hal"
optional = true

[dependencies.stm32l1xx-hal]
git = "https://github.com/stm32-rs/stm32l1xx-hal"
default-features = false
#version = "^0.1"
#version = "0.1.0"
optional = true

[dependencies.stm32l4xx-hal]
git = "https://github.com/stm32-rs/stm32l4xx-hal"
optional = true

[features]
stm32f0xx = []
stm32f1xx = []
stm32f3xx = []
stm32f4xx = []
stm32f7xx = []
stm32h7xx = []
stm32l0xx = []
stm32l1xx = []
stm32l4xx = []
#device-selected = []
#doc = []
stm32f030xc = ["stm32f0xx-hal/stm32f030xc", "stm32f0xx-hal/rt"]
stm32f100 = ["stm32f1xx-hal/stm32f100", "stm32f1xx-hal/rt"]
stm32f101 = ["stm32f1xx-hal/stm32f101", "stm32f1xx-hal/rt"]
stm32f103 = ["stm32f1xx-hal/stm32f103", "stm32f1xx-hal/rt"]
stm32f303xc = ["stm32f3xx-hal/stm32f303xc", "stm32f3xx-hal/rt"] 
stm32f401 = ["stm32f4xx-hal/stm32f401", "stm32f4xx-hal/rt"] 
stm32f405 = ["stm32f4xx-hal/stm32f405", "stm32f4xx-hal/rt"] 
stm32f411 = ["stm32f4xx-hal/stm32f411", "stm32f4xx-hal/rt"] 
stm32f722 = ["stm32f7xx-hal/stm32f722", "stm32f7xx-hal/rt"] 
stm32h742 = ["stm32h7xx-hal/stm32h742", "stm32h7xx-hal/rt"]
# see https://www.st.com/resource/en/datasheet/stm32l072v8.pdf  p12 for some MCU variants
stm32l0x2 = ["stm32l0xx-hal/stm32l0x2", "stm32l0xx-hal/rt", "stm32l0xx-hal/mcu-STM32L072KZTx"]
#stm32l0x1 = ["stm32l0xx-hal/stm32l0x1", "stm32l0xx-hal/rt", "stm32l0xx-hal/mcu-STM32L071KBTx"]
stm32l100 = ["stm32l1xx-hal/stm32l100", "stm32l1xx-hal/rt"]
stm32l151 = ["stm32l1xx-hal/stm32l151", "stm32l1xx-hal/rt"]
stm32l4x1 = ["stm32l4xx-hal/stm32l4x1", "stm32l4xx-hal/rt"]
stm32l4x2 = ["stm32l4xx-hal/stm32l4x2", "stm32l4xx-hal/rt"]

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]
#version = "1.0.0-alpha.1"   July 2020 gives ... led3.set_low() method not found ...

[dependencies.asm-delay]
version = "0.7.0"

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"
# this causes problem with stm32l0xx_hal:  panic-itm = "0.4.1"
cortex-m-rtfm = "0.4.3"
cortex-m-semihosting = "0.3.3"
enc28j60 = "0.2.1"
heapless = "0.4.3"
m = "0.1.1"
mfrc522 = "0.2.0"
serde_derive = "1.0.90"

[dev-dependencies.byteorder]
default-features = false
version = "1.3.1"

[dev-dependencies.cobs]
default-features = false
version = "0.1.4"

[dev-dependencies.crc16]
default-features = false
version = "0.4.0"

[dev-dependencies.either]
default-features = false
version = "1.5.2"

#[dev-dependencies.jnet]
#git = "https://github.com/japaric/jnet"
#rev = "df96b408049ca952ad7844d6552e87cf8fc18d2a"

#[dev-dependencies.motor-driver]
#git = "https://github.com/japaric/motor-driver"
#rev = "00c8b15223643090d69f1acfb8b7a7a43a440417"

#[dev-dependencies.mpu9250]
#git = "https://github.com/japaric/mpu9250"
#rev = "8f9ecad690093cb71c41301ca5e5705706150610"

[dev-dependencies.serde]
default-features = false
version = "1.0.90"

#[dev-dependencies.serde-json-core]
#git = "https://github.com/japaric/serde-json-core"
#rev = "6f12b77c1ffeae167989fe06e0d8b15978bd6d18"

## Devices with 64 or 128 Kb ROM
#medium = []
## Devices with 256 or 512 Kb ROM
#high = ["medium"]
## Devices with 768 Kb ROM or more
#xl = ["high"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

