[package]
name = "eg_stm_hal"
version = "0.1.0"
authors = ["Paul Gilbert <pdgilbert@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/pdgilbert/eg_stm_hal"
#documentation = "https://"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# name = "whatever"  #lib name defaults to package name
# for most package the path to the lib would be
#path = "src/lib.rs"
# for the setup here "src/lib.rs" works if there is a link src/  --> ../../src/  
# but  "../../src/lib.rs" works without the link.
path = "../../src/lib.rs"
# A flag for enabling unit tests for this target. This is used by `cargo test`.
test = true

[[example]]
name = "test"
path = "examples/test.rs"
#required-features = ["rt"]

[[example]]
name = "blink"
path = "examples/blink.rs"

[[example]]
name = "blink3"
path = "examples/blink3.rs"

[[example]]
name = "echo_by_char"
path = "examples/echo_by_char.rs"

[[example]]
name = "echo_string"
path = "examples/echo_string.rs"

[[example]]
name = "serial_char"
path = "examples/serial_char.rs"

[[example]]
name = "serial_string"
path = "examples/serial_string.rs"

[[example]]
name = "gps_rw"
path = "examples/gps_rw.rs"

[[example]]
name = "temperature"
path = "examples/temperature.rs"

[[example]]
name = "dht"
path = "examples/dht.rs"

[[example]]
name = "text_i2c"
path = "examples/text_i2c.rs"

#[[example]]
#name = "ads1015-display"
#path = "examples/ads1015-display.rs"

[[example]]
name = "lora_spi_send"
path = "examples/lora_spi_send.rs"

[[example]]
name = "lora_spi_receive"
path = "examples/lora_spi_receive.rs"

[[example]]
name = "lora_spi_gps"
path = "examples/lora_spi_gps.rs"


#[[example]]
#name = "digi_pot"
#path = "examples/digi_pot.rs"


[dependencies]
#cortex-m            = { version = ">=0.7.1" }
cortex-m             = { version = ">=0.6.4" } # optional breaks blink for stm32f0xx
#cortex-m            = { version = "=0.6.4"  }  #as of March 2021 needed for stm32h742,  stm32l0x2, stm32l4x2 but others need >=0.7.0
nb                   = { version = ">=0.1.2" }
cortex-m-rt          = { version = ">=0.6.8" }
panic-reset          = { version = ">=0.1.0" }
panic-halt           = { version = ">=0.2.0" }

# for example  ads1015-display
#dht11 = "0.3.1"
#dht-sensor = "0.1.1"

ads1x1x =  { version = "0.2", optional = true }
# this causes problem with stm32l0xx_hal:  shared-bus = { version = "0.1.4", features = ["cortexm"] }

# for example digi_pot
# mcp4x = "0.1"
f3 = { version = ">=0.6.1", optional = true }

embedded-spi = { version = "0.6", default-features = false }

# for radio-sx127x 
embedded-hal = { version = "1.0.0-alpha.4" }

# for  lora_spi_*
#radio-sx127x  = { version = "0.10.1",        default-features = false }
#radio-sx127x  = {  git = "https://github.com/rust-iot/rust-radio-sx127x", default-features = false }
radio-sx127x  = {  git = "https://github.com/pdgilbert/rust-radio-sx127x", default-features = false }

radio         = { version = "0.8.1" }
driver-pal    = { version = "0.8.0-alpha.0", default-features = false }

# for  text_i2c which uses ssd1306, ads1015-display example.    need rust 1.40.0 for #[non_exhaustive]
ssd1306   = { git = "https://github.com/jamwaffles/ssd1306"  }  #version = "0.3.1" # "0.2.6" "0.3.1"
embedded-graphics   = { version = ">=0.6.0"}                    #version = ">=0.6.0" #  "0.4.4" # "0.4.9"  "0.6.2"

dht-sensor   = { version =  "^0.2.1" }
#git = "https://github.com/michaelbeaumont/dht-sensor", branch = "main", rev = "bcbcf8146f98b15b62dba4f5e2ce9f74a243e6d9"

# for example digi_pot
mcp4x   = { git = "https://github.com/eldruin/mcp4x-rs" }
# version = "0.1",  optional = true

stm32f0xx-hal = { git = "https://github.com/stm32-rs/stm32f0xx-hal", optional = true }
stm32f1xx-hal = { git = "https://github.com/eldruin/stm32f1xx-hal", branch = "embedded-hal-1.0.0-alpha.4", optional = true }  
#   rev = "7cb3c53d3badab55d9128dc2418a06d0f719eacd"
stm32f3xx-hal = { git = "https://github.com/stm32-rs/stm32f3xx-hal", optional = true }
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true }
stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal", optional = true }
stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", optional = true }
stm32l0xx-hal = { git = "https://github.com/stm32-rs/stm32l0xx-hal", optional = true }
stm32l1xx-hal = { git = "https://github.com/stm32-rs/stm32l1xx-hal", optional = true, default-features = false}
stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal", optional = true }

# for bugs and unusual return values in some hals
void          = { version = ">=1.0.2", default-features = false }

[patch.crates-io]
# Patch for radio-hal to update embedded-hal version
radio = { git = "https://github.com/ryankurte/rust-radio.git", branch = "master" }

[features]
stm32f0xx = []
stm32f1xx = []
stm32f3xx = []
stm32f4xx = []
stm32f7xx = []
stm32h7xx = []
stm32l0xx = []
stm32l1xx = []
stm32l4xx = []
#device-selected = []
#doc = []
stm32f030xc = ["stm32f0xx-hal/stm32f030xc", "stm32f0xx-hal/rt"]
stm32f042   = ["stm32f0xx-hal/stm32f042",   "stm32f0xx-hal/rt"]
stm32f100 = ["stm32f1xx-hal/stm32f100", "stm32f1xx-hal/rt"]
stm32f101 = ["stm32f1xx-hal/stm32f101", "stm32f1xx-hal/rt"]
stm32f103 = ["stm32f1xx-hal/stm32f103", "stm32f1xx-hal/rt"]
stm32f303xc = ["stm32f3xx-hal/stm32f303xc", "stm32f3xx-hal/rt"] 
stm32f401 = ["stm32f4xx-hal/stm32f401", "stm32f4xx-hal/rt"] 
stm32f405 = ["stm32f4xx-hal/stm32f405", "stm32f4xx-hal/rt"] 
stm32f411 = ["stm32f4xx-hal/stm32f411", "stm32f4xx-hal/rt"] 
stm32f722 = ["stm32f7xx-hal/stm32f722", "stm32f7xx-hal/rt"] 
stm32h742 = ["stm32h7xx-hal/stm32h742", "stm32h7xx-hal/rt"]
# see https://www.st.com/resource/en/datasheet/stm32l072v8.pdf  p12 for some MCU variants
stm32l0x2 = ["stm32l0xx-hal/stm32l0x2", "stm32l0xx-hal/rt", "stm32l0xx-hal/mcu-STM32L072KZTx"]
#stm32l0x1 = ["stm32l0xx-hal/stm32l0x1", "stm32l0xx-hal/rt", "stm32l0xx-hal/mcu-STM32L071KBTx"]
stm32l100 = ["stm32l1xx-hal/stm32l100", "stm32l1xx-hal/rt"]
stm32l151 = ["stm32l1xx-hal/stm32l151", "stm32l1xx-hal/rt"]
stm32l4x1 = ["stm32l4xx-hal/stm32l4x1", "stm32l4xx-hal/rt"]
stm32l4x2 = ["stm32l4xx-hal/stm32l4x2", "stm32l4xx-hal/rt"]


# features passed through to dht example
dht11 = []
dht22 = []

[dev-dependencies]
cortex-m-semihosting = { version = ">=0.3.3" }
panic-semihosting    = { version = ">=0.5.2" }
heapless = ">=0.4.3"

## Devices with 64 or 128 Kb ROM
#medium = []
## Devices with 256 or 512 Kb ROM
#high = ["medium"]
## Devices with 768 Kb ROM or more
#xl = ["high"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

